--- a/style.css
+++ b/style.css
@@ -1,14 +1,5 @@
-
-header {
-	padding: 20px;
-	text-align: center;
-	background-color: #fff;
-	font-size: 20px;
-}
-
-.content {
-	background-color: green;
-	padding: 20px;
-	text-align: center;
-	color: black;
+footer {
+	font-style: 20px;
+	background: red;
+	color: white;
 }
